Add merge unique for groups and users

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,4 +1,10 @@
 ---
+lookup_options:
+  profile_allow_ssh_from_cerberus::groups:
+    merge: "unique"
+  profile_allow_ssh_from_cerberus::users:
+    merge: "unique"
+
 profile_allow_ssh_from_cerberus::cerberus_nodelist:
   - "141.142.148.5"
   - "141.142.236.22"
