Add org_asd & org_irst as default groups

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -11,5 +11,7 @@ profile_allow_ssh_from_bastion::bastion_nodelist:
   - "141.142.236.23"
   - "141.142.148.24"
 profile_allow_ssh_from_bastion::custom_cfg: {}
-profile_allow_ssh_from_bastion::groups: []
+profile_allow_ssh_from_bastion::groups: 
+  - org_asd
+  - org_irst
 profile_allow_ssh_from_bastion::users: []
