--- a/data/common.yaml
+++ b/data/common.yaml
@@ -11,6 +11,6 @@ profile_allow_ssh_from_bastion::custom_cfg:
   PasswordAuthentication: "yes"
   PubkeyAuthentication: "no"
 profile_allow_ssh_from_bastion::groups:
-  - "org_asd"
+  - "org_ici"
   - "org_irst"
 profile_allow_ssh_from_bastion::users: []
